--- a/api-typescript-node-expess-4/package.json
+++ b/api-typescript-node-expess-4/package.json
@@ -14,11 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "module-alias": "^2.2.2"
+    "helmet": "^6.0.1",
+    "module-alias": "^2.2.2",
+    "mongoose": "^6.8.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
