--- a/api-typescript-node-expess-4/package.json
+++ b/api-typescript-node-expess-4/package.json
@@ -19,6 +19,7 @@
     "envalid": "^7.3.1",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "joi": "^17.7.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0"
